--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;User=root;Database=kitap_db; default command timeout=120; SslMode=none"
+    "DefaultConnection": "Server=localhost;User=root;Database=kitap_db; default command timeout=120; SslMode=none;charset=utf-8"
   }
 }
